fix: Stop text from wildly overflowing in weird mid-breakpoint place

--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@
 
   .header__content {
     width: 50%;
+    min-width: 35ch;
     margin-right: auto;
     text-align: left;
   }
